--- a/day1/style.css
+++ b/day1/style.css
@@ -1,74 +1,54 @@
 
 /* ================================================= */
-/* h1 {
-    color: #088c37;
-  } */
-  
-  body, h1 {
-    color: rgb(80, 80, 80);
-    background-color: rgb(161, 161, 161);
-    font-family: sans-serif, /*Arial, Helvetica  */ ;
-  }
-  
-  /* * {
-    font-family: sans-serif;
-    color: red;
+  * {
+    font-family: 'Times New Roman', Times, serif;
     box-sizing: border-box;
   }
-   */
-  /* #welcomeMessage {
-    color: grey;
-  } */
   
-  /* #blackText {
-    color: black;
-  } */
-  
-  /* .text-black {
-    color: black;
-    font-weight: lighter;
-    font-size: 16px;
+  body, h1, h2 {
+    color: rgb(80, 80, 80);
+    background-color: rgb(161, 161, 161);
   }
-  
-  .text-italic {
-    font-style: italic;
-  }
-   */
   .card {
-    /* border: 2px solid lightslategray; */
-    padding: 16px 32px;
+    border: 2px solid lightslategray;
+    padding: 20px 20px;
     color: grey;
-    /* border-top-right-radius: 12px;
-    border-bottom-right-radius: 12px;
-    border-bottom-left-radius: 12px; */
-    width: 300px;
-    height: 300px;
+    background-color: rgb(223, 223, 223);
+    border-radius: 12px;
+    border-top-left-radius: 0px;
+    width: 500px;
+    height: 100px;
+    text-align: center;
     display: inline-block;
-    /* overflow: scroll; */
+    overflow: hidden;
   }
   
-  /* .separator {
-    margin-top: 16px;
-  } */
-  
+  .separator {
+    margin: 20px 20px;
+  }
+
   .black-card {
     width: 215px;
     height: 114px;
     background-color: black;
-    padding-top: 16px;
-    padding-left: 18px;
   }
   
   .black-card-title {
+    padding-top: 6px;
+    padding-left: 8px;
     font-size: 9px;
     font-weight: 900;
     color: white;
     text-transform: uppercase;
+    text-align: start;
   }
   
   .black-card-subtitle {
+    padding-left: 8px;
     font-weight: 500;
     font-size: 7px;
     color: white;
-    margin-top: 4px;
+    margin-top: 2px;
+    text-transform: lowercase;
+    text-align: start;
   }
