--- a/day1/tugas/style.css
+++ b/day1/tugas/style.css
@@ -3,93 +3,89 @@
   font-family: 'Inter', sans-serif;
 }
 
-.image {
-  display: inline-block;
+#container {
+  display: inline-flex;
+  justify-content: center;
 }
 
+.image {
+  width: fit-content;
+  height: fit-content;
+  margin-top: 50px;
+  /* border: solid hotpink; */
+}
 
 .item {
   margin-left: 40px;
-  /* background-color: blue; */
-  width: 480px;
-  height: 680px;
-  display: inline-block;
-  overflow: hidden;
+  width: fit-content;
+  height: fit-content;
+  overflow: scroll;
+  display: inline;
+  text-align: start;
+  /* border: solid hotpink; */
 }
 
-#color {
+.item .cart {
+  display: inline;
+  margin-left: 400px;
+  width: 87px;
+  height: 15px;
+  font-size: xx-small;
+  font-weight: bolder;
+}
+
+.item .cart:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.item #color {
   font-size: x-large;
   font-weight: normal;
 }
 
-#item-name {
+.item #name {
   margin-top: 4px;
   font-size: x-large;
   font-weight: 800;
 }
 
-#item-price {
-  width: 103px;
-  height: 31px;
+.item #price {
+  width: 100px;
+  height: 30px;
   margin-top: 30px;
   font-weight: bold;
 }
 
-#item-desc {
-  width: 346px;
-  height: 131px;
+.item #desc {
+  width: 350px;
+  height: 135px;
   margin-top: 30px;
   font-size: small;
-  color: #0000004D;
+  color: #6666664d;
 }
 
-
-#size {
+.item #size #mode {
   color: #000000b7;
   font-size: x-small;
 }
 
-.medium {
+.item #size .mode {
   font-weight: bolder;
   font-size: medium;
-  margin-left: 10px;
+  margin-left: 1px;
 }
 
-.medium:hover{
+.item #size .mode:hover{
   cursor: pointer;
   background-color: tomato;
   list-style: circle;
 }
 
-.cart {
-  width: 257px;
-  height: 70px;
-  display: inline-block;
-  margin-left: 200px;
-  /* background-color: green; */
-}
-
-.go-back {
-  width: 87px;
-  height: 15px;
-  font-size: xx-small;
-  font-weight: bolder;
-  margin-left: 200px;
-  
-}
-
-.go-back:hover{
-  text-decoration: underline;
-  cursor: pointer;
-  /* background-color: whitesmoke; */
-}
-
-
-#note {
-  /* background-color: gray; */
-  width: 88px;
+.item #note {
+  width: 85px;
   height: 30px;
-  margin-left: 350px;
+  margin-left: 355px;
   display: inline-block;
   font-size: xx-small;
   color:#000000b7;
@@ -97,8 +93,8 @@
 }
 
 .cart-button {
-  width: 147px;
-  height: 48px;
+  width: 145px;
+  height: 50px;
   color: white;
   background-color: black;
   font-size: x-small;
