ui: add plceholder icon cart

--- a/day1/tugas/style.css
+++ b/day1/tugas/style.css
@@ -25,6 +25,13 @@
   /* border: solid hotpink; */
 }
 
+.item .icon {
+  width: 21px;
+  height: 21px;
+  margin-left: 410px;
+  background-color: black;
+}
+
 .item .cart {
   display: inline;
   margin-left: 400px;
